--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
+    "netlify-lambda": "^1.5.0",
     "nuxt": "^2.3.4"
   },
   "devDependencies": {
